# keel

./: .env.example  .gitignore  AGENTS.md  PITCH.md  README.md  _fix.cjs  _replace.cjs  _replace2.cjs  after-appearance-click  appearance-tab  apply-migration.js  build-tauri.bat  eslint.config.js  index.html  login-page.yml  opencode.json  overview-fixed.yml  overview-full.yml  overview-rpc.yml  overview.yml  package-lock.json  package.json  pro-panel-concepts.html  settings-page  vercel.json  vite.config.js
.playwright-mcp/: page-2026-06-08T22-03-01-017Z.yml  page-2026-06-08T22-04-47-681Z.yml  page-2026-06-08T22-04-56-040Z.yml  page-2026-06-08T22-05-18-096Z.yml  page-2026-06-08T22-05-20-446Z.yml  page-2026-06-16T10-44-47-150Z.yml  page-2026-06-16T10-46-28-544Z.yml  page-2026-06-16T10-46-38-706Z.yml  page-2026-06-16T10-49-21-777Z.yml  page-2026-06-17T21-43-46-205Z.yml  page-2026-06-17T22-32-31-139Z.yml  page-2026-06-21T09-58-46-941Z.yml  page-2026-07-08T20-50-22-691Z.yml  page-2026-07-08T20-52-24-615Z.yml  page-2026-07-08T21-01-08-670Z.yml  page-2026-07-10T11-08-47-142Z.yml  page-2026-07-13T18-04-25-815Z.yml  page-2026-07-14T08-18-34-057Z.yml  page-2026-07-14T08-20-56-519Z.yml  page-2026-07-14T11-58-20-746Z.yml
docs/: architecture.md  overview-layout-concepts.md  storefront-overhaul-plan.md
loading-mockups/: 01-logo-pulse-ring.html  02-morphing-bars.html  03-orbit-cosmic.html  04-wave-fill.html  05-card-stack-flip.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
(+244 files in other folders)
