[package]
name = "keel"
version = "1.1.0"
edition = "2021"

[profile.release]
opt-level = 2
strip = "debuginfo"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
